# fhe.rs

./: .gitignore  .gitmodules  mulpir_stats.csv  mulpir_stats.small.c5.4xlarge.csv  mulpir_stats_100MB.csv  mulpir_stats_400MB.csv  run_demo.sh
ai_plans/: mulpir-cpu-demo.md  pir-map-performance-optimizations.md  spiral-cpu-demo.md  spiral-gpu-server.md  tile-splitting.md  ypir-demo.md
crates/fhe/: Cargo.toml
crates/fhe-wasm/: Cargo.toml
crates/fhe-wasm/src/: lib.rs
crates/fhe/examples/: generate_test_vectors.rs  mulpir.rs  pir_e2e_test.rs
crates/fhe/tests/: heongpu_ntt.rs
crates/mulpir-cpu-wasm/: Cargo.toml
crates/mulpir-cpu-wasm/src/: lib.rs
crates/spiral-wasm/: Cargo.toml
crates/spiral-wasm/src/: lib.rs
crates/ypir-wasm/: Cargo.toml
docs/: mulpir-protocol-specification.md  testing-assessment.md
docs/plans/: 2026-02-15-e2e-testing-design.md
mulpir-cpu/: run_demo.sh
mulpir-cpu/demo/frontend/: app.js  index.html
mulpir-cpu/demo/proxy/: server.py
mulpir-cpu/server/: Cargo.toml
mulpir-cpu/server/src/: main.rs
mulpir-gpu/: run_demo.sh
mulpir-gpu-server/: CMakeLists.txt
mulpir-gpu-server/apps/: server_main.cpp
mulpir-gpu-server/cmake/: FindHEonGPU.cmake
mulpir-gpu-server/include/: config.hpp
mulpir-gpu-server/include/database/: database_manager.hpp
mulpir-gpu-server/include/encoding/: tile_encoder.hpp
mulpir-gpu-server/include/pir/: pir_engine.hpp
mulpir-gpu-server/include/serialization/: wire_format.hpp
mulpir-gpu-server/include/server/: pir_server.hpp
mulpir-gpu-server/scripts/: generate_test_vectors.sh  run_tests.sh
mulpir-gpu-server/src/database/: database_manager.cu
mulpir-gpu-server/src/encoding/: tile_encoder.cu
mulpir-gpu-server/src/pir/: pir_engine.cu  query_expander.cu
mulpir-gpu-server/src/serialization/: wire_format.cu
mulpir-gpu-server/src/server/: pir_server.cpp
mulpir-gpu-server/tests/: test_compat.cu  test_helpers.hpp  test_pir_engine.cu  test_vector_loader.hpp
mulpir-gpu/demo/frontend/: app.js
mulpir-gpu/demo/proxy/: server.py
mulpir-gpu/demo/scripts/: run_demo.sh
mulpir-gpu/demo/tiles/: prepare_tiles.py
mulpir-gpu/server/: .gitignore
mulpir-gpu/server/apps/: benchmark.cu
mulpir-gpu/server/include/: types.hpp
mulpir-gpu/server/include/pir/: dot_product.hpp  query_expander.hpp  selector.hpp
mulpir-gpu/server/include/serialization/: wire_format.hpp
mulpir-gpu/server/include/server/: pir_server.hpp
mulpir-gpu/server/scripts/: run_e2e_tests.sh
mulpir-gpu/server/src/pir/: dot_product.cu  selector.cu
mulpir-gpu/server/src/serialization/: wire_format.cu
mulpir-gpu/server/tests/: test_compat.cu  test_encoding.cu  test_helpers.hpp  test_vector_loader.hpp
pir-map-demo/frontend/: app.js  index.html  style.css
pir-map-demo/proxy/: server.py
pir-map-demo/scripts/: run_demo.sh
pir-map-shared/frontend/: map-setup.js
pir-map-shared/proxy/: common.py
spiral-cpu/: run_demo.sh
spiral-cpu/demo/: tiles
spiral-cpu/demo/frontend/: app.js  index.html
spiral-cpu/demo/proxy/: server.py
spiral-cpu/server/: Cargo.toml
spiral-cpu/server/src/: main.rs
spiral-gpu/: CMakeLists.txt  run_demo.sh
spiral-gpu/demo/: frontend  proxy
spiral-gpu/server/: CMakeLists.txt
spiral-gpu/server/include/: host_ntt.hpp  params.hpp  serialization.hpp  types.hpp
spiral-gpu/server/src/: main.cpp  params_impl.cpp  pipeline.hpp  serialization.cpp  types_impl.cu
spiral-gpu/server/src/kernels/: arith.cu  arith.cuh  automorph.cu  automorph.cuh  gadget.cu  gadget.cuh  ntt.cu  ntt.cuh  poly_ops.cu  poly_ops.cuh
spiral-gpu/server/src/pipeline/: database.cu  db_multiply.cu  expand_query.cu  fold_pack.cu  process_query.cu
ypir-cpu/: run_demo.sh
ypir-cpu/demo/frontend/: app.js  index.html
ypir-cpu/demo/proxy/: server.py
ypir-cpu/server/: Cargo.toml
