[package]
name = "fhe-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "WASM PIR client using fhe.rs BFV library"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fhe = { path = "../fhe" }
fhe-math = { path = "../fhe-math" }
fhe-traits = { path = "../fhe-traits" }
fhe-util = { path = "../fhe-util" }
prost = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand.workspace = true
console_error_panic_hook = "0.1"
