[package]
name = "mulpir-cpu-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fhe = { path = "../fhe" }
fhe-traits = { path = "../fhe-traits" }
fhe-util = { path = "../fhe-util" }
rand.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde_json = "1"
