[package]
name = "spiral-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "WASM PIR client using spiral-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spiral-rs = { path = "../../sdk/lib/spiral-rs" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[lints]
workspace = true
